--- a/templates/theme-spritemap/client-extension.yaml.mustache
+++ b/templates/theme-spritemap/client-extension.yaml.mustache
@@ -2,7 +2,7 @@ assemble:
     - from: build
       include: spritemap.svg
       into: static
-{{ name }}:
+{{ nameKebabCase }}:
     name: {{ name }}
     type: themeSpritemap
     url: spritemap.svg 
