feat: add fds-cell-renderer template

--- a/templates/theme-spritemap/package.json.mustache
+++ b/templates/theme-spritemap/package.json.mustache
@@ -2,7 +2,7 @@
 	"dependencies": {
 		"@liferay/dxp-7.4": "*"
 	},
-	"name": "{{ name }}:",
+	"name": "{{ nameKebabCase }}",
 	"scripts": {
 		"build": "liferay build",
 		"clean": "liferay clean",
