chore: update templates to include "prepare blocks"

--- a/templates/custom-element-create-react-app/client-extension.yaml.mustache
+++ b/templates/custom-element-create-react-app/client-extension.yaml.mustache
@@ -1,3 +1,10 @@
+{{#sharedContainer}}
+prepare:
+    - command: [yarn]
+      workingDir: {{nameKebabCase}}
+    - command: [yarn, build]
+      workingDir: {{nameKebabCase}}
+{{/sharedContainer}}
 assemble:
     {{#sharedContainer}}
     - from: {{ nameKebabCase }}/build/static
