--- a/templates/custom-element-liferay-cli/client-extension.yaml.mustache
+++ b/templates/custom-element-liferay-cli/client-extension.yaml.mustache
@@ -21,10 +21,10 @@ assemble:
 {{ nameKebabCase }}:
     cssURLs:
         {{#sharedContainer}}
-        - {{ nameKebabCase }}/css/styles.css
+        - {{ nameKebabCase }}/styles.css
         {{/sharedContainer}}
         {{^sharedContainer}}
-        - /css/styles.css
+        - styles.css
         {{/sharedContainer}}
     friendlyURLMapping: {{ nameKebabCase }}
     htmlElementName: {{ nameKebabCase }}
