--- a/templates/fds-cell-renderer/client-extension.dev.yaml.mustache
+++ b/templates/fds-cell-renderer/client-extension.dev.yaml.mustache
@@ -1,7 +1,7 @@
 {{ nameKebabCase }}:
     {{#sharedContainer}}
-    url: localhost:8081/{{ nameKebabCase }}/index.js 
+    url: http://localhost:8081/{{ nameKebabCase }}/index.js 
     {{/sharedContainer}}
     {{^sharedContainer}}
-    url: localhost:8081/index.js 
+    url: http://localhost:8081/index.js 
     {{/sharedContainer}}
