chore: update dev config and generation logic

--- a/templates/fds-cell-renderer/package.json.mustache
+++ b/templates/fds-cell-renderer/package.json.mustache
@@ -18,6 +18,6 @@
 {{/typescript}}
   "scripts": {
     "build": "liferay build",
-    "start": "liferay start"
+    "start": "PORT=8082 liferay start"
   }
 }
